Build hướng đói tương cho form Customer và Employee

--- a/MISA.CukCuk/MISA.CukCuk/MISA.CukCuk.csproj
+++ b/MISA.CukCuk/MISA.CukCuk/MISA.CukCuk.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\content\icon\" />
+    <Folder Include="wwwroot\js\base\" />
     <Folder Include="wwwroot\pages\report\" />
   </ItemGroup>
 
